# EdgeBook

./: .dockerignore  .gitignore  Dockerfile  README.md  analytics.py  app.py  calculations.py  database.py  index.html  package-lock.json  package.json  risk_manager.py
data/: trading_journal.db
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: EquityChart.tsx  Metric.tsx
src/lib/: format.ts  types.ts
