[package]
name = "edgebook"
version = "0.1.0"
description = "EdgeBook trading journal"
authors = ["EdgeBook"]
edition = "2021"

[lib]
name = "edgebook_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
thiserror = "2"
